--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
     "next": "12.1.0",
+    "next-i18next": "^10.5.0",
+    "next-themes": "^0.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.6",
+    "react-switch": "^6.0.0",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23"
   }
 }
