--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.5.1",
     "next": "12.1.0",
     "next-i18next": "^10.5.0",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.6",
