--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.5.1",
+    "axios": "^0.26.1",
     "next": "12.1.0",
     "next-i18next": "^10.5.0",
+    "next-redux-wrapper": "^7.0.5",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
-    "react-scroll": "^1.8.6",
+    "react-redux": "^7.2.6",
     "react-switch": "^6.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
