--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.5.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.26.1",
+    "firebase": "^9.6.9",
     "next": "12.1.0",
     "next-i18next": "^10.5.0",
     "next-redux-wrapper": "^7.0.5",
@@ -29,7 +31,6 @@
     "react-switch": "^6.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "@reduxjs/toolkit": "^1.6.2",
     "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
